--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#page-top">REK</a>
+      <a class="navbar-brand" href="#page-top">Richard e Ketherin</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -99,6 +99,7 @@
       <div class="col-lg-12">
         <image src="images/home.png" class="home" />
         <span class="calendar">Faltam <span id="days"></span> dias</span>
+        <span class="save-the-date"><img src="images/SaveTheDate.png" alt="01.07.2017" /></span>
         <div class="intro-text">
           <span class="name">Ketherin & Richard</span>
           <hr class="star-light">
@@ -109,25 +110,179 @@
   </div>
 </header>
 
-<div include-html="_our_history.html"></div> 
-<div include-html="_gallery.html"></div>
-<div include-html="_how_to_get.html"></div>
-<div include-html="_gifts_list.html"></div>
-<div include-html="_confirm.html"></div>
+<!-- Our History Section -->
+<section id="our-history">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Nossa História</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-14">
+        <p>Era uma tarde 27 Dezembro de 2008, quando estava fuxicando o Orkut de um parente da família Brandão, quando me deparei com o nome Richard Brandão. Lembro-me como se fosse ontem, você parecia um Deus grego com aqueles óculos escuros, sem camisa e cabelo arrepiado. Então decidi tomar uma decisão que jamais poderia imaginar que seria para sempre ... Eu o adicionei. No nosso primeiro bate-papo, resolvi pedir ele em namoro, e não demorou nem 1 segundo e ele aceitou. Eu cheguei na hora certa, pois ele estava disposto a entrar em um relacionamento. E assim a nossa história começou.</p>
+      </div>
+      <div class="col-lg-14">
+        <p>Mas não foi tão simples assim, nosso primeiro encontro foi apenas no dia 28 de Março de 2009 e a partir desse dia começamos a namorar para valer. Aguardei tanto pelo tão esperado primeiro beijo, o que dizer dele?! Mágico, Perfeito, tudo que eu sempre sonhei e imaginei em um homem!</p>
+      </div>
 
-
-<!-- Footer -->
-<footer class="text-center">
-  <div class="footer-below">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          Te amarei de Janeiro a Janeiro!
-        </div>
+      <div class="col-lg-14">
+        <p>E assim os dias foram passando e a vontade de estar com ele foi aumentando cada dia mais e o nosso amor foi crescendo aos poucos até que no dia 11 de Abril de 2009, nosso relacionamento se tornou oficial para toda família, o dia em que ele pediu a minha mão em namoro para os meus pais. Pois é ... Para alguns casais pode ser brega, mas para mim, essa atitude foi digna de um prícipe.</p>
+      </div>
+      <div class="col-lg-14">
+        <p>Poderia escrever um livro sobre nossa história, mas não posso rsrs ... Tivemos várias primaveras, as folhas cairam até que chegou o dia tão esperado. O dia do pedido de casamento! Era 6 de março de 2014 e até então era apenas mais um dia mágico de nossa passagem pela Itália, quando no final da tarde estavamos indo para a Fontana di Trevi. Eu não esperava, fiquei surpresa e muito feliz, não sabia que podia caber tantas coisas boas dentro de mim naquele momento. Viver esse momento, em Roma, com o homem que eu amo ajoelhado com um sorriso imenso no rosto, com tantas pessoas ao meu redor aplaudindo aquele momento que eu tanto esperei, nos aplaudindo foi perfeito! Isso sim é magia!</p>
+      </div>
+      <div class="col-lg-14">
+        <p>E desde esse dia, estamos contando os dias e as horas para esse dia tão esperado, para finalmente sermos marido e mulher perante Deus e a sociedade.</p>
       </div>
     </div>
   </div>
-</footer>
-</body>
+</section>
 
+<!-- Gallery Grid Section -->
+<section class="success" id="gallery">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Galeria</h2>
+        <hr class="star-light">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto1.JPG" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto1.JPG" class="img-responsive" />
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto2.JPG" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto2.JPG" class="img-responsive" />
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto3.JPG" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto3.JPG" class="img-responsive" />
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto4.JPG" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto4.JPG" class="img-responsive" />
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto5.JPG" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto5.JPG" class="img-responsive" />
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item"><br><br>
+        <a href="images/Foto12.jpg" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto12.jpg" class="img-responsive" />
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto7.jpg" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto7.jpg" class="img-responsive" />
+        </a>
+        <a href="images/Foto8.jpg" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto8.jpg" class="img-responsive" />
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto9.jpg" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto9.jpg" class="img-responsive" />
+        </a>
+        <a href="images/Foto10.JPG" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto10.JPG" class="img-responsive" />
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item">
+        <a href="images/Foto6.jpg" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto6.jpg" class="img-responsive" />
+        </a>
+        <a href="images/Foto11.jpg" class="portfolio-link foreground" data-toggle="lightbox">
+          <image src="images/Foto11.jpg" class="img-responsive" />
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- How To Get Section -->
+<section id="how-to-get">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Como Chegar</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-5">
+        <p>Igreja: Paróquia São José</p>
+        <p>Endereço: R. Salustiano Silva, 27 - Magalhaes Bastos, Rio de Janeiro - RJ, 21745-590</p>
+        <p><a href="https://www.google.com.br/maps/place/Par%C3%B3quia+S%C3%A3o+Jos%C3%A9/@-22.8705667,-43.4127823,17z/data=!3m1!4b1!4m5!3m4!1s0x9961f1f564374d:0xea14b27e9ea15551!8m2!3d-22.8705717!4d-43.4105936?hl=pt-PT" target="_blank">Ver no mapa</a>
+        <p>Horário: 18h 30min</p>
+      </div>
+      <div class="col-lg-5">
+        <p>Salão: Espaço Maison Supreme Festas & Eventos</p>
+        <p>Endereço: R. Carolina Machado, 1488 - Bento Ribeiro, Rio de Janeiro - RJ, 21321-000</p>
+        <p><a href="https://www.google.com.br/maps/place/Espa%C3%A7o+Maison+Supreme+Festas+%26+Eventos/@-22.8641407,-43.3619505,17z/data=!3m1!4b1!4m5!3m4!1s0x99629a747644fb:0x57b7fafb0db5889a!8m2!3d-22.8641457!4d-43.3597618?hl=pt-PT" target="_blank">Ver no mapa</a>
+        <p></p>
+        <p>Horário: 20h 00min</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Gift List Section -->
+<section class="success" id="gifts-list">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Lista de Casamento</h2>
+        <hr class="star-light">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-lg-offset-2">
+        <a href="https://listadecasamento.shoptime.com.br/pages/GuestGiftListPage/bridalRegistryId/01-01-1849370" target="_blank">
+          <img src="images/shoptime.png" class="img-responsive" />
+        </a>
+      </div>
+      <br>
+      <div class="col-lg-4">
+        <a href="https://sites.icasei.com.br/richard_ketherin/pt_br/store/9/1" target="_blank">
+          <img src="images/icasei.png" class="img-responsive" />
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Confirmation Section -->
+<section id="confirm">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Confirmação</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-lg-offset-2">
+        <p>Solicitamos que seja feita a confirmação da presença até o dia <strong>20 de Junho</strong></p>
+        <p><strong>Telefone:</strong> 21 24010905</p>
+        <p><strong>Email:</strong> camilanunesassessoria@gmail.com</p>
+        <p>Falar com <strong>Frederico</strong> ou <strong>Camila</strong></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+</body>
 </html>
